# lazyradio

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  SETUP.md  TEST_INSTRUCTIONS.md  TROUBLESHOOTING.md  install.sh  test_tui_startup.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
Formula/: rad.rb
completions/: _radc
doc/tui/: colors.md  layout.md  navigation.md
docs/issues/active/: cannot open multiple fronts at the same time.md
rad/: Cargo.toml
rad-cli/src/: main.rs
rad-core/src/: config.rs  ipc_client.rs  lib.rs
rad-core/src/search/: autocomplete.rs  parser.rs
rad-core/src/storage/: mod.rs
rad-daemon/src/: main.rs
rad-tui/: Cargo.toml
rad-tui/src/: app.rs  main.rs
rad-tui/src/app/: mod.rs  navigation.rs
rad-tui/src/cli/: mod.rs  search.rs
rad-tui/src/ui/: layout.rs  search_popup.rs
src/: app.rs  config.rs  ipc_client.rs  main.rs
src/api/: client.rs
src/player/: audio.rs
src/search/: autocomplete.rs  mod.rs  parser.rs
src/storage/: mod.rs
src/ui/: layout.rs  mod.rs  search_popup.rs
tui-kit/: Cargo.toml
tui-kit/src/: block.rs  lib.rs  popup.rs  tabs.rs  theme.rs
