[package]
name = "rad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal radio player powered by Radio Browser"
keywords = ["radio", "tui", "terminal", "audio", "player"]
categories = ["command-line-utilities", "multimedia::audio"]

[lib]
name = "rad"
path = "src/lib.rs"

[[bin]]
name = "rad"
path = "src/main.rs"

[features]
default = ["tui"]
tui = [
    "dep:ratatui",
    "dep:crossterm",
    "dep:souvlaki",
    "dep:cliclack",
]

[dependencies]
# Workspace dependencies
tui-kit = { path = "../tui-kit" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

# Core (always included)
reqwest = { version = "0.12", features = ["json", "stream"] }
ureq = "2.10"
rodio = { version = "0.19", features = ["symphonia-all"] }
trust-dns-resolver = "0.23"
bytes = "1.5"
rand = "0.8"
unicode-width = "0.2"
urlencoding = "2.1"
futures-util = "0.3.32"
stream-download = "0.24.0"

# TUI (optional, gated by "tui" feature)
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }
cliclack = { version = "0.2", optional = true }
souvlaki = { version = "0.8", features = ["use_dbus"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.24.0"
