[package]
name = "tui-kit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Reusable TUI theme, widget frames, and layout helpers built on ratatui"
keywords = ["tui", "ratatui", "terminal", "widgets", "theme"]

[dependencies]
ratatui = "0.28"
